--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <section id="hero" class="page-section relative flex items-center justify-center min-h-screen overflow-hidden bg-gray-100 pt-16">
             <!-- Background Image and Overlay -->
             <div class="absolute inset-0 z-0">
-                <img src="galeria/hero-community-manager.jpg" alt="Community manager trabajando en una laptop con gráficos de redes sociales." class="w-full h-full object-cover" onerror="this.onerror=null; this.src='https://placehold.co/1920x1080/E5E7EB/111827?text=Falta+imagen:%0A' + this.getAttribute('src');">
+                <img src="galeria/hero-community-manager.png" alt="Community manager trabajando en una laptop con gráficos de redes sociales." class="w-full h-full object-cover" onerror="tryNextFormat(this, 'galeria/hero-community-manager')">
                 <div class="absolute inset-0 bg-white/60"></div> <!-- White overlay -->
             </div>
 
@@ -300,7 +300,7 @@
                     <!-- Instagram -->
                     <div class="product-item group">
                         <div class="relative overflow-hidden rounded-lg shadow-md h-80 bg-gray-100 flex justify-center items-center border border-gray-200">
-                            <img src="galeria/instagram.png" alt="Gestión de Instagram" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" onerror="this.onerror=null; this.src='https://placehold.co/600x800/111827/FFFFFF?text=Falta+imagen:%0A' + this.getAttribute('src');">
+                            <img src="galeria/instagram.png" alt="Gestión de Instagram" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" onerror="tryNextFormat(this, 'galeria/instagram')">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                             <div class="absolute bottom-0 left-0 p-6 w-full text-white">
                                 <h3 class="text-3xl font-bold">Instagram</h3>
@@ -311,7 +311,7 @@
                     <!-- Facebook -->
                     <div class="product-item group">
                         <div class="relative overflow-hidden rounded-lg shadow-md h-80 bg-gray-100 flex justify-center items-center border border-gray-200">
-                            <img src="galeria/facebook.png" alt="Gestión de Facebook" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" onerror="this.onerror=null; this.src='https://placehold.co/600x800/111827/FFFFFF?text=Falta+imagen:%0A' + this.getAttribute('src');">
+                            <img src="galeria/facebook.png" alt="Gestión de Facebook" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" onerror="tryNextFormat(this, 'galeria/facebook')">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                             <div class="absolute bottom-0 left-0 p-6 w-full text-white">
                                 <h3 class="text-3xl font-bold">Facebook</h3>
@@ -322,7 +322,7 @@
                     <!-- TikTok -->
                     <div class="product-item group">
                         <div class="relative overflow-hidden rounded-lg shadow-md h-80 bg-gray-100 flex justify-center items-center border border-gray-200">
-                            <img src="galeria/tiktok.png" alt="Gestión de TikTok" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" onerror="this.onerror=null; this.src='https://placehold.co/600x800/111827/FFFFFF?text=Falta+imagen:%0A' + this.getAttribute('src');">
+                            <img src="galeria/tiktok.png" alt="Gestión de TikTok" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" onerror="tryNextFormat(this, 'galeria/tiktok')">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                             <div class="absolute bottom-0 left-0 p-6 w-full text-white">
                                 <h3 class="text-3xl font-bold">TikTok</h3>
@@ -333,7 +333,7 @@
                     <!-- LinkedIn -->
                     <div class="product-item group">
                         <div class="relative overflow-hidden rounded-lg shadow-md h-80 bg-gray-100 flex justify-center items-center border border-gray-200">
-                           <img src="galeria/linkedin.png" alt="Gestión de LinkedIn" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" onerror="this.onerror=null; this.src='https://placehold.co/600x800/111827/FFFFFF?text=Falta+imagen:%0A' + this.getAttribute('src');">
+                           <img src="galeria/linkedin.png" alt="Gestión de LinkedIn" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" onerror="tryNextFormat(this, 'galeria/linkedin')">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                             <div class="absolute bottom-0 left-0 p-6 w-full text-white">
                                 <h3 class="text-3xl font-bold">LinkedIn</h3>
@@ -344,7 +344,7 @@
                     <!-- X (Twitter) -->
                     <div class="product-item group">
                         <div class="relative overflow-hidden rounded-lg shadow-md h-80 bg-gray-100 flex justify-center items-center border border-gray-200">
-                            <img src="galeria/x.png" alt="Gestión de X (Twitter)" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" onerror="this.onerror=null; this.src='https://placehold.co/600x800/111827/FFFFFF?text=Falta+imagen:%0A' + this.getAttribute('src');">
+                            <img src="galeria/x.png" alt="Gestión de X (Twitter)" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" onerror="tryNextFormat(this, 'galeria/x')">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                             <div class="absolute bottom-0 left-0 p-6 w-full text-white">
                                 <h3 class="text-3xl font-bold">X (Twitter)</h3>
@@ -355,7 +355,7 @@
                     <!-- WhatsApp -->
                     <div class="product-item group">
                         <div class="relative overflow-hidden rounded-lg shadow-md h-80 bg-gray-100 flex justify-center items-center border border-gray-200">
-                            <img src="galeria/whatsapp.png" alt="Gestión de WhatsApp" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" onerror="this.onerror=null; this.src='https://placehold.co/600x800/111827/FFFFFF?text=Falta+imagen:%0A' + this.getAttribute('src');">
+                            <img src="galeria/whatsapp.png" alt="Gestión de WhatsApp" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" onerror="tryNextFormat(this, 'galeria/whatsapp')">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                             <div class="absolute bottom-0 left-0 p-6 w-full text-white">
                                 <h3 class="text-3xl font-bold">WhatsApp</h3>
@@ -491,6 +491,27 @@
         mobileMenuButton.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
         });
+
+        // --- FUNCIÓN PARA MANEJAR ERRORES DE IMAGEN ---
+        const imageFormats = ['.png', '.jpg', '.jpeg', '.webp'];
+        function tryNextFormat(img, baseName) {
+            // Obtener el índice del formato actual o empezar en 0 si no está definido
+            let currentIndex = parseInt(img.dataset.formatIndex || '0');
+            
+            // Intentar con el siguiente formato de la lista
+            const nextIndex = currentIndex + 1;
+
+            if (nextIndex < imageFormats.length) {
+                // Actualizar el índice en el elemento
+                img.dataset.formatIndex = nextIndex;
+                // Probar el siguiente formato
+                img.src = baseName + imageFormats[nextIndex];
+            } else {
+                // Si todos los formatos fallaron, mostrar el placeholder
+                img.onerror = null; // Evitar bucles infinitos
+                img.src = `https://placehold.co/600x800/111827/FFFFFF?text=Falta+imagen:%0A${baseName.split('/').pop()}.png`;
+            }
+        }
 
         // --- SCRIPT PARA LA NAVEGACIÓN Y FUNCIONALIDADES DE CONTACTO ---
         document.addEventListener('DOMContentLoaded', function() {
